--- a/releases/20300.md
+++ b/releases/20300.md
@@ -6,4 +6,4 @@
 ### Magisk Manager
 - Fix MagiskHide app component toggles
 
-### Full Changelog: [here](https://topjohnwu.github.io/Magisk/changes.html)
+### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
