翻译部分发行日志

--- a/releases/19400.md
+++ b/releases/19400.md
@@ -20,4 +20,4 @@ Magisk Module developers can now finally properly modify files in `/product`! Th
 ### A-Only System-as-root
 A huge number of new devices have A-only system-as-root setups (Android 9.0). These unfortunate devices will have to install Magisk into the recovery partition. Please check the fully updated [Installation Guide](https://topjohnwu.github.io/Magisk/install.html) for more details.
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
