--- a/releases/20300.md
+++ b/releases/20300.md
@@ -6,4 +6,4 @@
 ### Magisk Manager
 - Fix MagiskHide app component toggles
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
