--- a/releases/21400.md
+++ b/releases/21400.md
@@ -15,4 +15,4 @@ Happy 2021! v21.3 adds a workaround for devices with buggy F2FS Linux kernel dri
 - [MagiskBoot] Fix a minor header checksum bug for `DHTB` header and ASUS `blob` image formats
 - [MagiskHide] Allowing hiding isolated processes if the mount namespace is separated
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
