--- a/releases/22000.md
+++ b/releases/22000.md
@@ -21,4 +21,4 @@ Another major breakthrough in this release is that devices lower than Android 9.
 - [MagiskInit] Support Galaxy S21 series
 - [MagiskSU] Fix incorrect APEX paths that caused `libsqlite.so` fail to load
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
