--- a/releases/22100.md
+++ b/releases/22100.md
@@ -1,22 +1,21 @@
 ## 2021.4.9 Magisk v22.1
 
-This release is focused on fixing regressions and bugs. Check the [v22.0 release notes](https://topjohnwu.github.io/Magisk/releases/22000.html) if coming from older releases.
+这个版本主要是修复退步和错误。如果是从旧版本来的，请查看[v22.0发布说明](https://topjohnwu.github.io/Magisk/releases/22000.html)。
 
-Note: Magisk v22 is the last major version to support Jellybean and Kitkat. Magisk v23 will only support Android 5.0 and higher.
+注意：Magisk v22是最后一个支持Jellybean和Kitkat的主要版本。Magisk v23将只支持Android 5.0和更高版本。
 
-### Bug Fixes
+### 错误修复
+- [App] 防止多个安装会话并行运行
+- [App] 防止在检查PXA启动镜像的启动签名时出现OutOfMemory崩溃。
+- [通用] 正确的cgroup迁移实现
+- [通用] 从头开始重写日志编写器，应该可以解决任何崩溃和死锁问题
+- [General] 许多脚本更新，修复了退步问题
+- [MagiskHide] 防止信号到达时可能出现的死锁。
+- [MagiskHide] 必要时部分匹配进程名称
+- [MagiskBoot] 在启动图像中保留和修补AVB 2.0结构/头文件
+- [MagiskBoot] 适当剥离数据加密标志
+- [MagiskBoot] 防止可能的整数溢出
+- [MagiskInit] 修复`sepolicy.rule`安装策略
+- [resetprop] 在更新前一定要删除现有的`ro.`props。这将修复因修改设备指纹属性而可能引起的启动循环。
 
-- [App] Prevent multiple installation sessions running in parallel
-- [App] Prevent OutOfMemory crashes when checking boot signature on PXA boot images
-- [General] Proper cgroup migration implementation
-- [General] Rewrite log writer from scratch, should resolve any crashes and deadlocks
-- [General] Many scripts updates fixing regressions
-- [MagiskHide] Prevent possible deadlock when signal arrives
-- [MagiskHide] Partial match process names if necessary
-- [MagiskBoot] Preserve and patch AVB 2.0 structures/headers in boot images
-- [MagiskBoot] Properly strip out data encryption flags
-- [MagiskBoot] Prevent possible integer overflow
-- [MagiskInit] Fix `sepolicy.rule` mounting strategy
-- [resetprop] Always delete existing `ro.` props before updating. This will fix bootloops that could be caused by modifying device fingerprint properties.
-
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
