--- a/releases/23000.md
+++ b/releases/23000.md
@@ -1,21 +1,20 @@
 ## 2021.5.12 Magisk v23.0
 
-This release is focused on fixing regressions and bugs.
+这个版本主要是修复退步和错误。
 
-Note: Magisk v22 is the last major version to support Jellybean and Kitkat. Magisk v23 only supports Android 5.0 and higher.
-
+注意：Magisk v22是最后一个支持Jellybean和Kitkat的主要版本。Magisk v23只支持Android 5.0和更高版本。
 ### Bug Fixes
 
-- [App] Update snet extension. This fixes SafetyNet API errors.
-- [App] Fix a bug in the stub app that causes APK installation to fail
-- [App] Hide annoying errors in logs when hidden as stub
-- [App] Fix issues when patching ODIN tar files when the app is hidden
-- [General] Remove all pre Android 5.0 support
-- [General] Update BusyBox to use proper libc
-- [General] Fix C++ undefined behaviors
-- [General] Several `sepolicy.rule` copy/installation fixes
-- [MagiskPolicy] Remove unnecessary sepolicy rules
-- [MagiskHide] Update package and process name validation logic
-- [MagiskHide] Some changes that prevents zygote deadlock
+- [app] 更新snet扩展。这修正了SafetyNet API的错误。
+- [app] 修复代理app中导致APK安装失败的错误
+- [App] 隐藏作为代理时日志中恼人的错误
+- [app] 修复app被隐藏时修补ODIN tar文件的问题
+- [通用] 删除所有Android 5.0之前的支持
+- [通用] 更新BusyBox以使用正确的libc
+- [通用] 修复C++的未定义行为
+- [通用] 几个`sepolicy.rule`复制/安装的修复
+- [MagiskPolicy] 删除不必要的sepolicy规则
+- [MagiskHide] 更新软件包和进程名称的验证逻辑
+- [MagiskHide] 一些防止zygote锁死的变化
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
