--- a/releases/24100.md
+++ b/releases/24100.md
@@ -1,23 +1,23 @@
 ## 2022.1.28 Magisk v24.1
 
-> For those coming from v24.0, v24.1 only has some minor app improvements. The following are copied from v24.0 release notes.
+> 对于那些从v24.0来的用户，v24.1只有一些小的应用改进。以下是复制自v24.0的发布说明。
 
-It has been a while since the last public release, long time no see! A personal update for those unaware: I am now working at Google on the Android Platform Security team. Without further ado, let's jump right into it!
+距离上次公开发布已经有一段时间了，很久没有见面了! 对那些不了解的人来说，有一个个人更新：我现在在谷歌的安卓平台安全团队工作。不多说了，让我们直接进入正题吧
 
-### MagiskHide Removal
+###MagiskHide的移除
 
-I have lost interest in fighting this battle for quite a while; plus, the existing MagiskHide implementation is flawed in so many ways. Decoupling Magisk from root hiding is, in my opinion, beneficial to the community. Ever since my announcement on Twitter months ago, highly effective "root hiding" modules (much **MUCH** better than MagiskHide) has been flourishing, which again shows that people are way more capable than I am on this subject. So why not give those determined their time to shine, and let me focus on improving Magisk instead of drowning in the everlasting cat-and-mouse game 😉.
+我已经对这场战斗失去了兴趣；另外，现有的MagiskHide实现在很多方面都有缺陷。在我看来，将Magisk与root隐藏脱钩对社区来说是有益的。自从几个月前我在Twitter上宣布之后，高效的 "root隐藏 "模块（比MagiskHide好得多***）一直在蓬勃发展，这再次表明人们在这个问题上比我更有能力。所以，为什么不给那些下定决心的人发挥的时间，而让我专注于改进Magisk，而不是淹没在永远的猫捉老鼠的游戏中😉。
 
-### Sunsetting Magisk-Modules-Repo
+### 废弃的的Magisk-Modules-Repo
 
-Due to lack of time and maintenance, the centralized Magisk-Modules-Repo was frozen, and the functionality to download modules from the repo is removed in v24.0. As a supplement, module developers can now specify an `updateJson` URL in their modules. The Magisk app will use that to check, download, and install module updates.
+由于缺乏时间和维护，集中的Magisk-Modules-Repo被冻结了，从Repo下载模块的功能在v24.0中被移除。作为补充，模块开发者现在可以在他们的模块中指定一个`updateJson`URL。Magisk应用程序将使用它来检查、下载和安装模块更新。
 
-### Introducing Zygisk
+### 引入Zygisk
 
-Zygisk is **Magisk in Zygote**, the next big thing for Magisk! When this feature is enabled, a part of Magisk will run in the `Zygote` daemon process, allowing module developers to run code directly in every Android apps' processes. If you've heard of [Riru](https://github.com/RikkaApps/Riru), then Zygisk is inspired by that project and is functionally similar, though the implementation is quite different internally. I cannot wait to see what module developers can achieve using Zygisk!
+Zygisk是**Magisk in Zygote**，是Magisk的下一件大事 当这个功能被启用时，Magisk的一部分将在`Zygote`守护进程中运行，允许模块开发者直接在每个Android应用程序的进程中运行代码。如果你听说过[Riru](https://github.com/RikkaApps/Riru)，那么Zygisk是受该项目启发，功能上很相似，尽管内部的实现方式很不同。我迫不及待地想看看模块开发者能用Zygisk实现什么!
 
-### Documentation
+### 文档
 
-For developers, details about `updateJson` and building Zygisk modules can all be found in the updated [documentation](https://topjohnwu.github.io/Magisk/guides.html#magisk-modules).
+对于开发者来说，关于`updateJson`和构建Zygisk模块的细节都可以在更新的[文档](https://topjohnwu.github.io/Magisk/guides.html#magisk-modules)中找到。
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
