--- a/releases/24200.md
+++ b/releases/24200.md
@@ -1,21 +1,22 @@
 ## 2022.3.1 Magisk v24.2
 
-Maintenance release fixing various issues.
+维护性发布，修复了各种问题。
 
-- [MagiskSU] Fix buffer overflow
-- [MagiskSU] Fix owner managed multiuser superuser settings
-- [MagiskSU] Fix command logging when using `su -c <cmd>`
-- [MagiskSU] Prevent su request indefinite blocking
-- [MagiskBoot] Support `lz4_legacy` archive with multiple magic
-- [MagiskBoot] Fix `lz4_lg` compression
-- [DenyList] Allow targeting processes running as system UID
-- [Zygisk] Workaround Samsung's "early zygote"
-- [Zygisk] Improved Zygisk loading mechanism
-- [Zygisk] Fix application UID tracking
-- [Zygisk] Fix improper `umask` being set in zygote
-- [App] Fix BusyBox execution test
-- [App] Improve stub loading mechanism
-- [App] Major app upgrade flow improvements
-- [General] Improve commandline error handling and messaging
+- [MagiskSU] 修复缓冲区溢出
+- [MagiskSU] 修正所有者管理的多用户超级用户设置
+- [MagiskSU] 修正使用`su -c <cmd>`时的命令记录。
+- [MagiskSU] 防止su请求无限期阻塞
+- [MagiskBoot] 用一些魔法来支持 "lz4_legacy "归档文件
+- [MagiskBoot] 修正`lz4_lg`压缩法
+- [DenyList] 允许瞄准以系统UID身份运行的进程
+- [Zygisk] 解决三星的 "早期zygote"。
+- [Zygisk] 改进Zygisk加载机制
+- [Zygisk]修复app程序UID跟踪
+- [Zygisk] 修复在zygote中设置的不正确的`umask`。
+- [App]修复BusyBox执行测试
+- [app] 改进代理加载机制
+- [app] 主要的app升级流程改进
+- [通用] 改进命令行错误处理和信息传递
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
