--- a/releases/24300.md
+++ b/releases/24300.md
@@ -1,9 +1,9 @@
 ## 2022.3.10 Magisk v24.3
 
-For those coming from v24.1, check the full changelog for changes introduced in v24.2.
+对于在 v24.1 加入的特性, 请查看完整发行日志中的 v24.2.
 
-- [General] Stop using `getrandom` syscall
-- [Zygisk] Update API to v3, adding new fields to `AppSpecializeArgs`
-- [App] Improve app repackaging installation workflow
+- [General] 停止使用`getrandom`系统调用.
+- [Zygisk] 更新API到v3，为`AppSpecializeArgs`添加新字段。
+- [App] 改进app重新打包的安装工作流程
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
