--- a/releases/18000.md
+++ b/releases/18000.md
@@ -27,4 +27,4 @@ This is also a good opportunity to push the whole community forward, all module 
 ### Modern C++ Code Base
 Although this has nothing to do with the end user, tons of effort was done to migrate Magisk to a more modern C++ code base instead of the previous good plain old C. This makes the code easier to maintain and allows me to utilized many C++ language features.
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
