--- a/releases/19100.md
+++ b/releases/19100.md
@@ -9,4 +9,4 @@ For those that were using v18.1, here are some quick highlights of v19.0
 
 Other than adding support for Samsung system-as-root devices, this release is mostly bug fixes from v19.0. Enjoy :)
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
