--- a/releases/20100.md
+++ b/releases/20100.md
@@ -13,4 +13,4 @@ For those incompatible with the hiding-with-stub feature, there are also a few u
 - You can now customize the app name of the repackaged Magisk Manager
 - Magisk Manager will generate new keys to sign the repackaged APK to prevent signature detection
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
