--- a/releases/20200.md
+++ b/releases/20200.md
@@ -12,4 +12,4 @@ The old template is actually pretty convoluted: developers are expected to imple
 
 For details regarding `sepolicy.rule` and the new module installer format, please read the updated [Developer Guides](https://topjohnwu.github.io/Magisk/guides.html). Note that the old "Module Installer Template" is obsolete; creating a Magisk module no longer requires a "template" as it is now a straightforward process.
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
