--- a/releases/21200.md
+++ b/releases/21200.md
@@ -11,4 +11,4 @@ v21.2 is a maintenance update, mostly addressing bugs, and expanding device comp
 - [General] Directly log to file to prevent `logcat` weirdness
 - [MagiskBoot] Fix header dump/load for header v3 images
 
-### Full Changelog: [here](https://magisk.aac6fef.top/changes.html)
+### 完整的发行日志: [传送门](https://magisk.aac6fef.top/changes.html)
